--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="forgot_password">Forgot Password?</string>
     <string name="or">OR</string>
     <string name="login_with_google">Login with Google</string>
+    <string name="logout">Logout</string>
+    <string name="default_web_client_id">251613238838-rkdtbtcf3tshcs3d2eul8p1pejp4cib6.apps.googleusercontent.com</string>
 </resources>
