--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="or">OR</string>
     <string name="login_with_google">Login with Google</string>
     <string name="logout">Logout</string>
+    <string name="user_image">User Image</string>
 </resources>
