--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="login_with_google">Login with Google</string>
     <string name="logout">Logout</string>
     <string name="user_image">User Image</string>
+    <string name="enter_a_message">Enter a message</string>
 </resources>
